spec/error_record_field_type.kex
# Record field access returns the declared field type.
# Adding an Integer field to a String is caught at compile time.
record User do
  name : String
  age : Integer
end
main do
  let u = User { name: "Alice", age: 30 }
  IO.printLine(u.age + "oops")
end
